# holomon

db/: docker-compose.yml
db/schemas/: user.json
server/: .gitignore  Cargo.toml  Dockerfile
server/src/: db_connection.rs  error.rs  main.rs
server/src/models/: app_models.rs  mod.rs  user.rs
server/src/models/schemas/: users.json
server/src/routes/: app_routes.rs  guards.rs  mod.rs
