[package]
name = "holomon-server"
version = "0.1.0"
authors = ["ZaneStaufer <stauffer_zane@columbusstate.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "holomon-server"
path = "src/main.rs"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "0d53e23", features = ["json"]}
tokio = { version = "0.2.25", features = ["full"] }
socket2 = "0.4.0"
serde = {version = "1.0.126", features = ["derive"]}
toml = "0.5.8"
config = "0.11.0"
clap = "2.33.3"
mongodb = "1.2.1"
bson = "2.0.0-beta.1"
lazy_static = "1.4.0"